--- a/docker-develop/Dockerfile.custom
+++ b/docker-develop/Dockerfile.custom
@@ -55,7 +55,7 @@ RUN chmod +x /usr/src/node-red/startup.sh && \
 FROM base AS build
 
 # Install Build tools
-RUN apk add --no-cache --virtual buildtools build-base linux-headers udev python && \
+RUN apk add --no-cache --virtual buildtools build-base linux-headers udev python2 && \
     npm install --unsafe-perm --no-update-notifier --no-fund --only=production && \
     /tmp/remove_native_gpio.sh && \
     cp -R node_modules prod_node_modules
